app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopingkaro-service
spec:
  selector:
    app: shopingkaro
  ports:
    - port: 80
      targetPort: 3000
