mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - port: 27017
  selector:
    app: mongo
  clusterIP: None
