app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopingkaro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: shopingkaro.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopingkaro-service
                port:
                  number: 80
